I fixed the freaking scrollbar!!!

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 	<!-- A canvas is an empty palatte on which to draw -->
 </canvas>	
 
+<textarea id="code" class="playable-code">
+context.font = "48px serif";
+context.fillText("Hello world", 570, 400);
+</textarea>	
+
 <script type="text/javascript">
 	
 	// var canvas = document.getElementsByClassName('the-canvas')[0];
